library menus set up

--- a/src/app/shared/sidebar/sidebar/sidebar.component.less
+++ b/src/app/shared/sidebar/sidebar/sidebar.component.less
@@ -1,12 +1,5 @@
 .container {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-  }
-  .fill-remaining-space {
-    flex: 1 1 auto;
+  height: 90vh;
   }
   
   main {
