--- a/src/app/pages/admissions/students/student-identification-form/student-identification-form.component.html
+++ b/src/app/pages/admissions/students/student-identification-form/student-identification-form.component.html
@@ -1,13 +1,40 @@
 <h1>student-identification Information</h1>
 <form [formGroup]="userIdentificaionForm" (ngSubmit)="submit()">
     <mat-form-field>
-        <label hidden for="firstName">First Name</label>
-        <span class="material-icons" matPrefix >person</span>
+        <label hidden for="firstName"><span class="material-icons" matPrefix >person</span> First Name</label>
+        
         <input (blur)="validateFirstName()" id="firstName" type="text" placeholder="first Name" formControlName="firstName" matInput>
         <mat-error
             *ngIf="errors.firstName"
         >
             {{ errors.firstName }}
+        </mat-error>
+    </mat-form-field>
+    <mat-form-field>
+        <label hidden for="lastName">Middle Name</label>
+        <input (blur)="validateMiddleName()" id="middleName" type="text" placeholder="Middle Name" formControlName="middleName" matInput>
+        <mat-error
+            *ngIf="errors.middleName"
+        >
+            {{ errors.middleName }}
+        </mat-error>
+    </mat-form-field>
+    <mat-form-field>
+        <label hidden for="lastName">Last Name</label>
+        <input (blur)="validateLastName()" id="lastName" type="text" placeholder="Last Name" formControlName="lastName" matInput>
+        <mat-error
+            *ngIf="errors.lastName"
+        >
+            {{ errors.lastName }}
+        </mat-error>
+    </mat-form-field>
+    <mat-form-field>
+        <label hidden for="otherNames">Other Names</label>
+        <input (blur)="validateOtherNames()" id="otherNames" type="text" placeholder="Other Names" formControlName="otherNames" matInput>
+        <mat-error
+            *ngIf="errors.otherNames"
+        >
+            {{ errors.lastName }}
         </mat-error>
     </mat-form-field>
 </form>
