Testing errors fixed

--- a/src/app/pages/admissions/students/add-student/add-student.component.html
+++ b/src/app/pages/admissions/students/add-student/add-student.component.html
@@ -3,7 +3,7 @@ Create Student
     <mat-expansion-panel [expanded]="step === 0" (opened)="setStep(0)" hideToggle>
       <mat-expansion-panel-header>
         <mat-panel-title>
-          Personal data
+          <h1>Identification Information</h1>
         </mat-panel-title>
         <mat-panel-description>
           Type your name and age
