--- a/src/app/pages/admissions/students/add-student/add-student.component.less
+++ b/src/app/pages/admissions/students/add-student/add-student.component.less
@@ -1,13 +1,22 @@
-.example-headers-align .mat-expansion-panel-header-title,
-.example-headers-align .mat-expansion-panel-header-description {
-  flex-basis: 0;
+.headers-align .mat-expansion-panel-header-title,
+.headers-align .mat-expansion-panel-header-description {
+ 
 }
 
-.example-headers-align .mat-expansion-panel-header-description {
+.headers-align .mat-expansion-panel-header-description {
   justify-content: space-between;
   align-items: center;
 }
-
-mat-form-field {
-  margin-right: 12px;
+header {
+  font-size: 2em;
+}
+h1 {
+  font-size: 1.5em;
+}
+.mat-expansion-panel {
+  margin-bottom: 5px;
+}
+.mat-expansion-panel-header {
+ 
+  
 }
