Git dialog implemented but has error

--- a/src/app/pages/admissions/students/add-student/add-student.component.html
+++ b/src/app/pages/admissions/students/add-student/add-student.component.html
@@ -11,8 +11,8 @@
       </mat-panel-description>
     </mat-expansion-panel-header>
 
-    <app-student-identification-details></app-student-identification-details>
-    <app-student-identification-form (submitted)="identificationSubmittedHandler()"
+    <!-- <app-student-identification-details></app-student-identification-details> -->
+    <app-student-identification-form (submitted)="identificationSubmittedHandler($event)"
       [submit]="submitStudentIdentificationInfo"></app-student-identification-form>
 
     <mat-action-row>
