--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,5 @@
 <main class="main">
+    <button mat-raised-button (click)="openDialog()">Pick one</button>
     <mat-card >
             <header >
                 <mat-card-title>
