--- a/src/styles.less
+++ b/src/styles.less
@@ -2,3 +2,8 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+header {
+    font-size: 20px;
+    font-weight: 800;
+}
