Student Guardian Creation completed

--- a/src/app/pages/admissions/students/add-student/add-student.component.html
+++ b/src/app/pages/admissions/students/add-student/add-student.component.html
@@ -38,7 +38,7 @@
 
     <mat-action-row>
       <button mat-button color="warn" (click)="prevStep()">Previous</button>
-      <button mat-button mat-flat-button color="primary" (click)="nextStep()">Next</button>
+      <button mat-button mat-flat-button color="primary" (click)="saveStudentGuardiansInfo()">Next</button>
     </mat-action-row>
   </mat-expansion-panel>
 
